--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "index.js"
   ],
   "scripts": {
+    "update": "pnpm up -i --latest",
     "lint": "eslint . --fix",
     "release": "bumpp package.json --commit --push --tag && pnpm publish --access public"
   },
@@ -23,7 +24,7 @@
     "stylelint": "^14.0.0"
   },
   "dependencies": {
-    "postcss-html": "^1.4.1",
+    "postcss-html": "^1.5.0",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-recommended": "^8.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
@@ -33,12 +34,12 @@
     "stylelint-css-modules": "^1.2.2",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-no-unsupported-browser-features": "^5.0.3",
-    "stylelint-scss": "^4.2.0"
+    "stylelint-scss": "^4.3.0"
   },
   "devDependencies": {
     "@jungzl/eslint-config-ts": "^0.0.1",
     "bumpp": "^8.0.0",
-    "eslint": "^8.16.0",
-    "typescript": "^4.7.2"
+    "eslint": "^8.19.0",
+    "typescript": "^4.7.4"
   }
 }
